--- a/amzconnect-instance/lib/instance-stack/configuration.json
+++ b/amzconnect-instance/lib/instance-stack/configuration.json
@@ -1,5 +1,5 @@
 {
-  "instanceAlias": "myTestalias-aaazzz",
+  "instanceAlias": "myfirstconnectinstance",
   "instanceStorageBucketName": "connect-aaazzz",
   "identityManagementType": "CONNECT_MANAGED",
   "instanceStorageConfig": [
